{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 15,
  "lineage": "f975c546-75b3-230b-5305-279283e1fb3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:internet-gateway/igw-027c63ed049de22f1",
            "id": "igw-027c63ed049de22f1",
            "owner_id": "022499024066",
            "tags": {
              "Name": "terraform-IGW"
            },
            "tags_all": {
              "Name": "terraform-IGW"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:route-table/rtb-03ac0ea53216849ac",
            "id": "rtb-03ac0ea53216849ac",
            "owner_id": "022499024066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027c63ed049de22f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-RT"
            },
            "tags_all": {
              "Name": "terraform-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028e49e636c5c6ae4",
            "route_table_id": "rtb-03ac0ea53216849ac",
            "subnet_id": "subnet-06b203696255f5061"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.terraform-RT",
            "aws_subnet.terraform-pub-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384b33d614cc840f",
            "route_table_id": "rtb-03ac0ea53216849ac",
            "subnet_id": "subnet-002de883aafaf6a1d"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.terraform-RT",
            "aws_subnet.terraform-pub-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa44608bd69e09fe",
            "route_table_id": "rtb-03ac0ea53216849ac",
            "subnet_id": "subnet-08f3b67ed9ef888e9"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.terraform-RT",
            "aws_subnet.terraform-pub-3",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:security-group/sg-07320bafd86b7ebb3",
            "description": "Security Group for terraform ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07320bafd86b7ebb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.56.1/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpr-stack-sg",
            "name_prefix": "",
            "owner_id": "022499024066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ssh"
            },
            "tags_all": {
              "Name": "terraform-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-priv-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-016d6643a090aa476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016d6643a090aa476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-priv-1"
            },
            "tags_all": {
              "Name": "terraform-priv-1"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-priv-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-07c424d08a855f5ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c424d08a855f5ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-priv-2"
            },
            "tags_all": {
              "Name": "terraform-priv-2"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-priv-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-0f096c034e4cb805f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f096c034e4cb805f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-priv-3"
            },
            "tags_all": {
              "Name": "terraform-priv-3"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-06b203696255f5061",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b203696255f5061",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-pub-1"
            },
            "tags_all": {
              "Name": "terraform-pub-1"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-002de883aafaf6a1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002de883aafaf6a1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-pub-2"
            },
            "tags_all": {
              "Name": "terraform-pub-2"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:subnet/subnet-08f3b67ed9ef888e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f3b67ed9ef888e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022499024066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-pub-3"
            },
            "tags_all": {
              "Name": "terraform-pub-3"
            },
            "vpc_id": "vpc-04c138f511eabe0c6"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022499024066:vpc/vpc-04c138f511eabe0c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9448187bcc33b3b",
            "default_route_table_id": "rtb-012bec7589fb15ad1",
            "default_security_group_id": "sg-0d103aeab4807dbca",
            "dhcp_options_id": "dopt-027bbbb5b4232eddd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c138f511eabe0c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012bec7589fb15ad1",
            "owner_id": "022499024066",
            "tags": {
              "Name": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile"
            }
          }
        }
      ]
    }
  ]
}